Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id="main_content">
           <h1>Pkg.js</h1>
 
-<p>The <strong>Pkg</strong> jQuery plugin is the first jQuery plugin designed specifically for <a href="http://developer.chrome.com/extensions/apps.html">Chrome Packaged Applications</a>.  It is based HEAVILY on the <a href="https://github.com/phiggins42/bloody-jquery-plugins">PubSub library</a> by <a href="http://higginsforpresident.net/projects/">Peter Higgins</a>.</p>
+<p><strong>Pkg.js</strong> is the first jQuery plugin designed specifically for <a href="http://developer.chrome.com/extensions/apps.html">Chrome Packaged Applications</a>.  It is based HEAVILY on the <a href="https://github.com/phiggins42/bloody-jquery-plugins">PubSub library</a> by <a href="http://higginsforpresident.net/projects/">Peter Higgins</a>.</p>
 
 <h2>What It Is</h2>
 
