Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ $.pkg.ignore("/some/method");
 
 <h2>Screencast</h2>
 
-<p><a href="http://www.youtube.com/embed/TUWHkYKJ9Wk?rel=0">This is a video</a> using the Pkg plugin to build a packaged application and going over the basics of CSP (Content Security Policy) in Chrome Packaged Apps.</p>
+<p><a href="http://www.youtube.com/watch?v=TUWHkYKJ9Wk">This is a video</a> using the Pkg plugin to build a packaged application and going over the basics of CSP (Content Security Policy) in Chrome Packaged Apps.</p>
         </section>
 
         <footer>
